Opened 12 years ago

Closed 12 years ago

Last modified 12 years ago

#3762 closed defect (fixed)

transport stream regression: audio stream missing

Reported by: Carl Eugen Hoyos Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mpegts regression
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket2441/
The sample from ticket #2441 contains two audio streams, only one is detected since 6eda91ad

$ ffmpeg -i Pirunpelto_cut.ts -map 0:3 -t 3.2 out.wav
ffmpeg version N-59130-gd600b18 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jul 11 2014 21:22:09 with gcc 4.7 (SUSE Linux)
  configuration:
  libavutil      52. 58.100 / 52. 58.100
  libavcodec     55. 45.101 / 55. 45.101
  libavformat    55. 22.100 / 55. 22.100
  libavdevice    55.  5.102 / 55.  5.102
  libavfilter     3. 92.100 /  3. 92.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 17.104 /  0. 17.104
[mpeg2video @ 0x190e4c0] Invalid frame dimensions 0x0.
    Last message repeated 4 times
[mpegts @ 0x1909940] PES packet size mismatch
    Last message repeated 1 times
Input #0, mpegts, from 'Pirunpelto_cut.ts':
  Duration: 00:00:06.92, start: 20359.308500, bitrate: 2959 kb/s
  Program 1
    Stream #0:1[0x45]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 15000 kb/s, 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:2[0x46](fin): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
    Stream #0:3[0x47](eng): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 224 kb/s
  No Program
    Stream #0:0[0x44](fin): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 224 kb/s
Output #0, wav, to 'out.wav':
  Metadata:
    ISFT            : Lavf55.22.100
    Stream #0:0(eng): Audio: pcm_s16le ([1][0][0][0] / 0x0001), 48000 Hz, stereo, s16, 1536 kb/s
Stream mapping:
  Stream #0:3 -> #0:0 (mp2 -> pcm_s16le)
Press [q] to stop, [?] for help
size=     542kB time=00:00:03.20 bitrate=1386.4kbits/s
video:0kB audio:542kB subtitle:0 global headers:0kB muxing overhead 0.014428%
$ ffmpeg -i Pirunpelto_cut.ts
ffmpeg version N-64623-g15e933b Copyright (c) 2000-2014 the FFmpeg developers
  built on Jul 11 2014 21:24:45 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 92.100 / 52. 92.100
  libavcodec     55. 69.100 / 55. 69.100
  libavformat    55. 45.100 / 55. 45.100
  libavdevice    55. 13.102 / 55. 13.102
  libavfilter     4. 10.100 /  4. 10.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
[mpeg2video @ 0x2171340] Invalid frame dimensions 0x0.
    Last message repeated 4 times
[NULL @ 0x2171e20] start time for stream 2 is not set in estimate_timings_from_pts
[mpegts @ 0x216cb20] PES packet size mismatch
Input #0, mpegts, from 'Pirunpelto_cut.ts':
  Duration: 00:00:06.96, start: 20359.308500, bitrate: 2942 kb/s
  Program 1
    Stream #0:0[0x44](fin): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 224 kb/s
    Stream #0:1[0x45]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 15000 kb/s, 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:2[0x46](fin): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
At least one output file must be specified

Change History (4)

comment:1 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in db0471c40f0fb30355c07cca5fe7317ab6778b5a
Note it seems the number of channels isnt detected for the stream

comment:2 by Carl Eugen Hoyos, 12 years ago

Resolution: fixed
Status: closedreopened

Afaict, this is still a regression since 6eda91ad

$ ffmpeg -i Pirunpelto_cut.ts
ffmpeg version N-67361-gdb0471c Copyright (c) 2000-2014 the FFmpeg developers
  built on Nov  3 2014 23:59:19 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --enable-gnutls
  libavutil      54. 11.100 / 54. 11.100
  libavcodec     56. 10.102 / 56. 10.102
  libavformat    56. 12.100 / 56. 12.100
  libavdevice    56.  2.100 / 56.  2.100
  libavfilter     5.  2.102 /  5.  2.102
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[mpeg2video @ 0x35c9300] Invalid frame dimensions 0x0.
    Last message repeated 4 times
[NULL @ 0x35c9e60] start time for stream 2 is not set in estimate_timings_from_pts
[mpegts @ 0x35c49e0] PES packet size mismatch
    Last message repeated 1 times
[mpegts @ 0x35c49e0] Could not find codec parameters for stream 3 (Audio: mp3 ([3][0][0][0] / 0x0003), 0 channels): unspecified frame size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, mpegts, from 'Pirunpelto_cut.ts':
  Duration: 00:00:06.96, start: 20359.308500, bitrate: 2942 kb/s
  Program 1
    Stream #0:0[0x44](fin): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 224 kb/s
    Stream #0:1[0x45]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 15000 kb/s, 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:2[0x46](fin): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
    Stream #0:3[0x47](eng): Audio: mp3 ([3][0][0][0] / 0x0003), 0 channels
At least one output file must be specified

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: reopenedclosed

comment:4 by Carl Eugen Hoyos, 12 years ago

Fixed for ffmpeg, ffplay and ffprobe in e971eef8

Last edited 12 years ago by Carl Eugen Hoyos (previous) (diff)
Note: See TracTickets for help on using tickets.