Set -scan_all_pmts 1 in ffmpeg, ffplay and ffprobe if not set by user.

Fixes ticket #3762.